--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "title": "Care Bear Stare",
     "name": "care-bear-stare",
-    "description": "Care Bear Stare Theme for Brackets. A theme for kids that code, ages 0–9. A Brackets original.",
+    "description": "Care Bear Stare Theme for Brackets. A theme for kids that code; ages 0–9. A Brackets original.",
     "version": "1.0.0",
     "author": "larz0 (https://github.com/larz0)",
     "homepage": "https://github.com/Brackets-Themes/CareBearStare",
